cabal-version:      2.4
name:               tagtree
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Hierarchical Tags & Tag Trees

-- A longer description of the package.
description:
  |
  Haskell library for representing hierarchical tags, such as `foo/bar/qux`, as
  well as a tree of such tags and then searching them based on path patterns.

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , filepattern
    , megaparsec
    , parser-combinators
    , relude
    , text

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  exposed-modules:
    Data.TagTree
    Data.TagTree.PathTree

  default-extensions:
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
